[package]
name = "bipolar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
git2 = "0.20.2"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"
