[package]
name = "bipolar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
ctrlc = "3.4.7"
git2 = "0.20.2"
rand = "0.9.1"
rand_chacha = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tera = "1.20.0"
toml = "0.8.22"
walkdir = "2.5.0"
